fix position relative overlaping everything

--- a/frontend/src/styles/trip-cards.scss
+++ b/frontend/src/styles/trip-cards.scss
@@ -11,7 +11,7 @@
   gap: 10px;
   min-height: 190px;
   justify-content: center;
-
+  z-index: -1;
   p {
     font-family: $font-family-secondary;
   }
